# libodbc-

libodbc++/: .cvsignore  ChangeLog  Makefile.am  NEWS  THANKS  autogen.sh  configure.ac  configure.in
libodbc++/doc/: INSTALL.sgml
libodbc++/doc/progref/: .cvsignore  Makefile.am  Makefile.in
libodbc++/include/odbc++/: callablestatement.h  config-win32.h  connection.h  parametermetadata.h  preparedstatement.h  setup.h  statement.h  types.h
libodbc++/isql++/: Makefile.am  isql++.h
libodbc++/m4/: ac_check_odbc.m4
libodbc++/qtsql++/: CMakeLists.txt  Makefile  Makefile.am  main.cpp  mainwindow.h
libodbc++/src/: CMakeLists.txt  Makefile.in  callablestatement.cpp  connection.cpp  databasemetadata.cpp  datahandler.cpp  datahandler.h  datastream.cpp  datastream.h  datetime.cpp  driverinfo.cpp  drivermanager.cpp  dtconv.h  errorhandler.cpp  preparedstatement.cpp  resultset.cpp  resultsetmetadata.cpp  statement.cpp
libodbc++/tests/: Makefile.am  dbmetadata.cpp  mysql.cpp  oracle.cpp  parameter-test.cpp  scroll.cpp
libodbc++/win32/: Makefile.in  Makefile.w32
libodbc++/win32/vc9/libodbc++/: ReadMe.txt  libodbc++.vcproj  stdafx.cpp
libodbc++/win32/vc9/mysql/: ReadMe.txt
trunk/libodbc++/: .cvsignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.cvs  NEWS  README.Unicode  README.qt  THANKS  acconfig.h  acinclude.m4  autogen.sh  configure.ac  configure.in  libodbc++.spec.in
trunk/libodbc++/doc/: .cvsignore  INSTALL.sgml  Makefile.in
trunk/libodbc++/doc/progref/: .cvsignore  Makefile.am
trunk/libodbc++/include/: Makefile.in
trunk/libodbc++/include/odbc++/: Makefile.in  config-win32.h  drivermanager.h  preparedstatement.h  resultset.h  resultsetmetadata.h  setup.h  statement.h  types.h
trunk/libodbc++/isql++/: .cvsignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  isql++.cpp  isql++.h
trunk/libodbc++/m4/: ac_check_odbc.m4
trunk/libodbc++/qtsql++/: .cvsignore  Makefile.am  Makefile.in  connectwindow.cpp  mainwindow.cpp  resultwindow.cpp  resultwindow.h
trunk/libodbc++/src/: CMakeLists.txt  Makefile.am  callablestatement.cpp  connection.cpp  databasemetadata.cpp  datahandler.cpp  datahandler.h  datastream.cpp  datastream.h  datetime.cpp  driverinfo.h  drivermanager.cpp  dtconv.h  errorhandler.cpp  parametermetadata.cpp  preparedstatement.cpp  resultset.cpp  resultsetmetadata.cpp  statement.cpp  threads.cpp
trunk/libodbc++/tests/: .cvsignore  Makefile.in  dbmetadata.cpp  mysql.cpp
trunk/libodbc++/win32/: Makefile.w32
trunk/libodbc++/win32/tests/: Makefile.in
trunk/libodbc++/win32/vc9/: libodbc++.sln
trunk/libodbc++/win32/vc9/libodbc++/: libodbc++.vcproj  stdafx.h
trunk/libodbc++/win32/vc9/mysql/: mysql.vcproj
